--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
     implementation 'com.android.support.constraint:constraint-layout:1.1.1'
-    //implementation 'com.twitter.sdk.android:twitter:3.0.0@aar'
+    implementation 'com.twitter.sdk.android:twitter:3.0.0@aar'
     implementation 'com.twitter.sdk.android:twitter-core:3.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
